k8s-file/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "40"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"k8s-app":"kiali-backend","keel.sh/policy":"all"},"name":"kiali-backend","namespace":"microsec-system"},"spec":{"replicas":1,"selector":{"matchLabels":{"k8s-app":"kiali-backend"}},"template":{"metadata":{"annotations":{"kiali.io/runtimes":"go,kiali","sidecar.istio.io/inject":"false"},"labels":{"k8s-app":"kiali-backend"},"name":"kiali"},"spec":{"containers":[{"command":["/opt/kiali/kiali","-config","/kiali-co [...]
    kubernetes.io/change-cause: keel automated update, version v1.17.0 -> v1.18.0
      [2021-11-13T14:34:51Z]
  creationTimestamp: "2021-06-06T11:44:18Z"
  generation: 44
  labels:
    k8s-app: kiali-backend
    keel.sh/policy: all
  name: kiali-backend
  namespace: microsec-system
  resourceVersion: "410710107"
  uid: 32f9288f-9e06-45ff-bbef-1c69d4275d0e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: kiali-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        keel.sh/update-time: 2021-11-13 14:34:51.985205593 +0000 UTC m=+576572.647705802
        kiali.io/runtimes: go,kiali
        kubectl.kubernetes.io/restartedAt: "2022-01-24T20:56:35-08:00"
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        k8s-app: kiali-backend
      name: kiali
    spec:
      containers:
      - command:
        - /opt/kiali/kiali
        - -config
        - /kiali-configuration/config.yaml
        image: gcr.io/msec-001/kiali-backend:v1.2.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: kiali-backend
        ports:
        - containerPort: 20001
          name: api-port
          protocol: TCP
        - containerPort: 9090
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 30m
          requests:
            cpu: 3m
            memory: 117Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /kiali-configuration
          name: kiali-configuration
        - mountPath: /kiali-cert
          name: kiali-cert
        - mountPath: /kiali-secret
          name: kiali-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: kiali-backend
        name: kiali-configuration
      - name: kiali-cert
        secret:
          defaultMode: 420
          optional: true
          secretName: istio.kiali-service-account
      - name: kiali-secret
        secret:
          defaultMode: 420
          optional: true
          secretName: kiali
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-06-26T10:50:05Z"
    lastUpdateTime: "2022-07-27T19:50:47Z"
    message: ReplicaSet "kiali-backend-79456cdb8f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-10-04T00:04:05Z"
    lastUpdateTime: "2022-10-04T00:04:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 44
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
